force-app/main/default/objects/PipeLinearWeight__c/PipeLinearWeight__c.object-meta.xml
<CustomObject>
    <description>A reference for determining pipe linear weight</description>
    <label>Pipe Linear Weight</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>PipeLinearWeight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipes Linear Weights</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>