force-app/main/default/objects/PipeLinearWeight__c/fields/CalculationGroup__c.field-meta.xml
<CustomField>
    <fullName>CalculationGroup__c</fullName>
    <label>CalculationGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tubing</fullName>
            </value>
            <value>
                <fullName>Casing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>