force-app/main/default/objects/PipeLinearWeight__c/fields/GeneralProductStandard__c.field-meta.xml
<CustomField>
    <fullName>GeneralProductStandard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Product Standard</label>
    <referenceTo>GeneralProductStandard__c</referenceTo>
    <relationshipLabel>Pipes Linear Weights</relationshipLabel>
    <relationshipName>Pipes_Linear_Weights</relationshipName>
    <type>Lookup</type>
</CustomField>