force-app/main/default/objects/PipeLinearWeight__c/fields/KeyField__c.field-meta.xml
<CustomField>
    <fullName>KeyField__c</fullName>
    <formula>GeneralProductStandard__r.ID_ERP__c + &apos;|&apos; +
Text(CalculationGroup__c) + &apos;|&apos; +
TubeOD__r.ID_ERP__c + &apos;|&apos; +
TubeWT__r.ID_ERP__c + &apos;|&apos; +
Text(TubeEndsType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Field</label>
    <type>Text</type>
</CustomField>