force-app/main/default/objects/PipeLinearWeight__c/fields/TubeEndsType__c.field-meta.xml
<CustomField>
    <fullName>TubeEndsType__c</fullName>
    <label>Ends Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NU</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>