force-app/main/default/objects/PipeLinearWeight__c/fields/TubeWT__c.field-meta.xml
<CustomField>
    <fullName>TubeWT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WT</label>
    <referenceTo>TubeWT__c</referenceTo>
    <relationshipLabel>Pipes Linear Weights</relationshipLabel>
    <relationshipName>Pipes_Linear_Weights</relationshipName>
    <type>Lookup</type>
</CustomField>