force-app/main/default/objects/PipeLinearWeight__c/fields/Weight_kpm__c.field-meta.xml
<CustomField>
    <fullName>Weight_kpm__c</fullName>
    <description>Linear weight (kilograms per meter)</description>
    <inlineHelpText>Linear weight (kilograms per meter)</inlineHelpText>
    <label>Weight (kpm)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>