force-app/main/default/objects/PipeLinearWeight__c/fields/Weight_ppf__c.field-meta.xml
<CustomField>
    <fullName>Weight_ppf__c</fullName>
    <description>Linear weight (pounds per foot)</description>
    <inlineHelpText>Linear weight (pounds per foot)</inlineHelpText>
    <label>Weight (ppf)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>