force-app/main/default/objects/PipeLinearWeight__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GeneralProductStandard__c</columns>
    <columns>CalculationGroup__c</columns>
    <columns>TubeOD__c</columns>
    <columns>TubeWT__c</columns>
    <columns>TubeEndsType__c</columns>
    <columns>Weight_kpm__c</columns>
    <columns>Weight_ppf__c</columns>
    <columns>KeyField__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>